[gd_scene load_steps=15 format=3 uid="uid://bsfjtqnkw8vtp"]

[ext_resource type="Script" path="res://script/second_enigma.gd" id="1_ccolq"]
[ext_resource type="Texture2D" uid="uid://cxph83xt7e3iq" path="res://resources/svg/Counter/Dummy.svg" id="1_eptsh"]
[ext_resource type="FontFile" uid="uid://c2iu4eowycoxp" path="res://resources/font/Bungee/Bungee-Regular.ttf" id="2_2dmjq"]
[ext_resource type="Texture2D" uid="uid://wnnf8o4ovnuh" path="res://resources/background/test tubes.png" id="2_mr4mi"]
[ext_resource type="Texture2D" uid="uid://c4axstyxv4s37" path="res://resources/svg/Button/IronButton/[1] Normal.png" id="4_n5ukb"]
[ext_resource type="Texture2D" uid="uid://b0beyvk74xkrd" path="res://resources/svg/Buttons/Square/ArrowLeft-Bold/Default.svg" id="5_1ghio"]
[ext_resource type="Texture2D" uid="uid://t6o20l1ejnrs" path="res://resources/UI_Flat_Frame01a.png" id="6_fwrvm"]
[ext_resource type="Texture2D" uid="uid://cl7fknll7u2bv" path="res://resources/svg/Button/IronButton/[3] Hover.png" id="6_k18e2"]
[ext_resource type="Script" path="res://script/Input.gd" id="6_xe1kq"]
[ext_resource type="Texture2D" uid="uid://7k7micbt2miv" path="res://resources/svg/Buttons/Square/ArrowLeft-Bold/Hover.svg" id="6_ynfvd"]
[ext_resource type="Texture2D" uid="uid://d4ko2rad36d6i" path="res://resources/svg/Button/IronButton/[2] Clicked.png" id="11_px8h3"]
[ext_resource type="Texture2D" uid="uid://bp35p4x17f0c2" path="res://resources/light/circle.png" id="12_g3fna"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_uiadx"]
polygon = PackedVector2Array(8.5, 0, 183.5, 0, 191.5, 7.5, 192.5, 56.5, 184, 65, 9, 64, -0.5, 56, -1, 7.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jjbgw"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="SecondEnigma" type="Node2D"]
script = ExtResource("1_ccolq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/BackgroundControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.167301, 0.183723, 0.250267, 1)

[node name="TimerControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerBg" type="Sprite2D" parent="CanvasLayer/TimerControl"]
position = Vector2(25, -606)
scale = Vector2(3, 3)
texture = ExtResource("1_eptsh")

[node name="TimerText" type="Label" parent="CanvasLayer/TimerControl/TimerBg"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -58.1667
offset_right = -18.0
offset_bottom = -3.16666
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.992157, 0.886275, 0.580392, 1)
theme_override_fonts/font = ExtResource("2_2dmjq")
theme_override_font_sizes/font_size = 35
text = "15:00"
metadata/_edit_use_anchors_ = true

[node name="ButtonsControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResetButton" type="TextureButton" parent="CanvasLayer/ButtonsControl"]
layout_mode = 0
offset_left = -443.0
offset_top = 550.0
offset_right = -247.0
offset_bottom = 634.0
scale = Vector2(2, 2)
texture_normal = ExtResource("4_n5ukb")
texture_pressed = ExtResource("6_k18e2")

[node name="LightOccluder2D" type="LightOccluder2D" parent="CanvasLayer/ButtonsControl/ResetButton"]
occluder = SubResource("OccluderPolygon2D_uiadx")

[node name="Label" type="Label" parent="CanvasLayer/ButtonsControl/ResetButton"]
layout_mode = 0
offset_left = 15.0
offset_top = 4.50003
offset_right = 182.0
offset_bottom = 51.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2dmjq")
theme_override_font_sizes/font_size = 30
text = "Reset"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnalyseButton" type="TextureButton" parent="CanvasLayer/ButtonsControl"]
layout_mode = 0
offset_left = 122.0
offset_top = 550.0
offset_right = 318.0
offset_bottom = 634.0
scale = Vector2(2, 2)
texture_normal = ExtResource("4_n5ukb")
texture_pressed = ExtResource("6_k18e2")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="CanvasLayer/ButtonsControl/AnalyseButton"]
position = Vector2(-1, -2)
occluder = SubResource("OccluderPolygon2D_uiadx")

[node name="Label" type="Label" parent="CanvasLayer/ButtonsControl/AnalyseButton"]
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 183.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0.00341551, 0.00391139, 0.00105562, 1)
theme_override_fonts/font = ExtResource("2_2dmjq")
theme_override_font_sizes/font_size = 30
text = "Analyze"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ButtonsControl"]
layout_mode = 0
offset_left = -461.0
offset_top = -465.0
offset_right = -161.0
offset_bottom = -315.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_n5ukb")

[node name="Input" type="LineEdit" parent="CanvasLayer/ButtonsControl/TextureRect"]
layout_mode = 0
offset_left = -6.25003
offset_top = 6.25
offset_right = 305.75
offset_bottom = 133.25
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2dmjq")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_jjbgw")
alignment = 1
max_length = 2
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
flat = true
caret_blink = true
script = ExtResource("6_xe1kq")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/ButtonsControl"]
layout_mode = 0
offset_left = -94.0
offset_top = -465.0
offset_right = 206.0
offset_bottom = -315.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_n5ukb")

[node name="Input2" type="LineEdit" parent="CanvasLayer/ButtonsControl/TextureRect2"]
layout_mode = 0
offset_left = -6.25003
offset_top = 6.25
offset_right = 305.75
offset_bottom = 133.25
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2dmjq")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_jjbgw")
alignment = 1
max_length = 2
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
flat = true
script = ExtResource("6_xe1kq")

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/ButtonsControl"]
layout_mode = 0
offset_left = 252.0
offset_top = -464.0
offset_right = 552.0
offset_bottom = -314.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_n5ukb")

[node name="Input3" type="LineEdit" parent="CanvasLayer/ButtonsControl/TextureRect3"]
layout_mode = 0
offset_left = -6.25006
offset_top = 6.25
offset_right = 305.75
offset_bottom = 133.25
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2dmjq")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_jjbgw")
alignment = 1
max_length = 2
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
flat = true
script = ExtResource("6_xe1kq")

[node name="FillButton" type="TextureButton" parent="CanvasLayer/ButtonsControl"]
layout_mode = 0
offset_left = -450.0
offset_top = -292.0
offset_right = -354.0
offset_bottom = -228.0
scale = Vector2(2.3, 1.2)
texture_normal = ExtResource("6_fwrvm")

[node name="Label" type="Label" parent="CanvasLayer/ButtonsControl/FillButton"]
layout_mode = 0
offset_left = 1.0
offset_right = 95.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2dmjq")
theme_override_font_sizes/font_size = 31
text = "Fill"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FillButton2" type="TextureButton" parent="CanvasLayer/ButtonsControl"]
layout_mode = 0
offset_left = -84.0
offset_top = -290.0
offset_right = 12.0
offset_bottom = -226.0
scale = Vector2(2.3, 1.2)
texture_normal = ExtResource("6_fwrvm")

[node name="Label" type="Label" parent="CanvasLayer/ButtonsControl/FillButton2"]
layout_mode = 0
offset_left = 1.0
offset_right = 95.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2dmjq")
theme_override_font_sizes/font_size = 31
text = "Fill"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FillButton3" type="TextureButton" parent="CanvasLayer/ButtonsControl"]
layout_mode = 0
offset_left = 264.0
offset_top = -290.0
offset_right = 360.0
offset_bottom = -226.0
scale = Vector2(2.3, 1.2)
texture_normal = ExtResource("6_fwrvm")

[node name="Label" type="Label" parent="CanvasLayer/ButtonsControl/FillButton3"]
layout_mode = 0
offset_left = 1.0
offset_right = 95.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2dmjq")
theme_override_font_sizes/font_size = 31
text = "Fill"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeadBarControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1714.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeadBar" type="ColorRect" parent="CanvasLayer/HeadBarControl"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2
color = Color(0.447059, 0.34902, 0.321569, 1)

[node name="ReturnButtonControl" type="Control" parent="CanvasLayer/HeadBarControl/HeadBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReturnButton" type="TextureButton" parent="CanvasLayer/HeadBarControl/HeadBar/ReturnButtonControl"]
layout_mode = 0
offset_left = 28.0
offset_top = 14.0
offset_right = 112.0
offset_bottom = 98.0
scale = Vector2(2, 2)
texture_normal = ExtResource("5_1ghio")
texture_pressed = ExtResource("6_ynfvd")
texture_hover = ExtResource("6_ynfvd")

[node name="TestTubeControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Slider1" type="ColorRect" parent="CanvasLayer/TestTubeControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 5.439
anchor_top = 29.132
anchor_right = 5.439
anchor_bottom = 29.132
offset_left = -614.56
offset_top = -731.28
offset_right = -509.56
offset_bottom = -731.28
color = Color(0, 0, 1, 1)

[node name="Slider2" type="ColorRect" parent="CanvasLayer/TestTubeControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = 414.0
offset_right = 61.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.785372, 0.0951145, 0.200237, 1)

[node name="Slider3" type="ColorRect" parent="CanvasLayer/TestTubeControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 297.0
offset_top = 414.0
offset_right = 404.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.29906, 0.857144, 3.85046e-07, 1)

[node name="TestTubes" type="TextureRect" parent="CanvasLayer/TestTubeControl"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -483.0
offset_top = -162.0
offset_right = 470.0
offset_bottom = 427.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mr4mi")
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4

[node name="CardNumber" type="TextureRect" parent="CanvasLayer/Control"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -240.0
offset_right = -150.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.8, 0.8)
texture = ExtResource("11_px8h3")

[node name="Card" type="Label" parent="CanvasLayer/Control/CardNumber"]
layout_mode = 0
offset_left = -6.25
offset_top = 15.0
offset_right = 305.75
offset_bottom = 142.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2dmjq")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_jjbgw")
text = "47"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointLight2D" type="PointLight2D" parent="CanvasLayer/Control/CardNumber"]
position = Vector2(156.25, 85)
scale = Vector2(0.999999, 0.999999)
color = Color(1, 1, 0.376471, 0.921569)
energy = 2.0
range_layer_max = 1
texture = ExtResource("12_g3fna")
texture_scale = 0.59

[node name="CardNumber2" type="TextureRect" parent="CanvasLayer/Control"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -240.0
offset_right = 200.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.8, 0.8)
texture = ExtResource("11_px8h3")

[node name="Card" type="Label" parent="CanvasLayer/Control/CardNumber2"]
layout_mode = 0
offset_left = -6.25
offset_top = 15.0
offset_right = 305.75
offset_bottom = 142.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2dmjq")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_jjbgw")
text = "45"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointLight2D2" type="PointLight2D" parent="CanvasLayer/Control/CardNumber2"]
position = Vector2(146.25, 75)
scale = Vector2(0.999999, 0.999999)
color = Color(1, 1, 0.376471, 0.921569)
energy = 2.0
range_layer_max = 1
texture = ExtResource("12_g3fna")
texture_scale = 0.59

[node name="CardNumber3" type="TextureRect" parent="CanvasLayer/Control"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 250.0
offset_top = -240.0
offset_right = 550.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.8, 0.8)
texture = ExtResource("11_px8h3")

[node name="Card" type="Label" parent="CanvasLayer/Control/CardNumber3"]
layout_mode = 0
offset_left = -6.25
offset_top = 15.0
offset_right = 305.75
offset_bottom = 142.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2dmjq")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_jjbgw")
text = "58"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointLight2D3" type="PointLight2D" parent="CanvasLayer/Control/CardNumber3"]
position = Vector2(146.25, 83.75)
scale = Vector2(0.999999, 0.999999)
color = Color(1, 1, 0.376471, 0.921569)
energy = 2.0
range_layer_max = 1
texture = ExtResource("12_g3fna")
texture_scale = 0.59

[connection signal="pressed" from="CanvasLayer/ButtonsControl/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonsControl/AnalyseButton" to="." method="_on_analyse_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonsControl/FillButton" to="." method="_on_fill_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonsControl/FillButton2" to="." method="_on_fill_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonsControl/FillButton3" to="." method="_on_fill_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/HeadBarControl/HeadBar/ReturnButtonControl/ReturnButton" to="." method="_on_return_button_pressed"]
